[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volume-analyzer"
version = "0.1.0"
description = "Audio preprocessing utilities that turn MP3 recordings into servo motion maps."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Anat Wax" }
]
dependencies = [
    "librosa>=0.10",
    "numpy>=1.23",
    "matplotlib>=3.7",
    "PyQt5>=5.15"
]

[project.urls]
Homepage = "https://github.com/Anatw/volume-analyzer"
Repository = "https://github.com/Anatw/volume-analyzer"

[tool.setuptools]
py-modules = ["music_volume_analyser"]
